A working version with built-in macro switch with value 1 as default. Only lock the timpstamp print when turned on.

--- a/server/Makefile
+++ b/server/Makefile
@@ -10,7 +10,7 @@ else
 	CC ?= $(CROSS_COMPILE)gcc
 endif
 
-CFLAGS ?= -g -Wall -Werror -DUSE_AESD_CHAR_DEVICE=1
+CFLAGS ?= -g -Wall -Werror 
 
 LDFLAGS ?= -lpthread -lrt
 
